# alo

./: .gitignore  .projections.json  CMakeLists.txt  PITCHME.md  README.md  check_nof_exported_symbols.sh  toto
Mapping/Contour/: CMakeLists.txt  ContourCreator.h
Mapping/Impl3/: CMakeLists.txt  SegmentationCImpl3.cxx  SegmentationImpl3.cxx  segmentationCImpl3.cxx
Mapping/Interface/: CMakeLists.txt
Mapping/SegContour/: CMakeLists.txt  SVGSegmentation.cxx  SegmentationContours.cxx  SegmentationContours.h  SegmentationSVGWriter.cxx  SegmentationSVGWriter.h
Mapping/test/: CMakeLists.txt  bench_Segmentation.cxx  test_Segmentation.cxx
aliroot/jsonmap/: CMakeLists.txt  CONTOUR.md  README.md  ch.cxx  ch.h  ch2json.h  de.cxx  de.h  de2json.h  generateTestFiles.cxx  json.h  legacyseg2json.h  mch-mapping-convert-to-json.cxx  mid-generate-test-files.cxx  motifPosition.cxx  motifPosition.h  motifType.cxx  pcb2json.h  readmapping.h  seg.h
binmap/: CMakeLists.txt  Makefile  bp2json.cxx  ch2json.cxx  ch2json.h  de2json.cxx  json.cxx  json.h  mch-mapping-convert-to-json.cxx  motif2json.cxx  motif2json.h  pcb2json.cxx  pcb2json.h  rootlogon.C  seg2json.cxx  seg2json.h  slat2json.cxx  slat2json.h  txt2json.C
contour/: CMakeLists.txt  bbox.h  cantypefitvalue.h  contour.cxx  contour.h  contourCreator.cxx  contourCreator.h  edge.h  helper.h  interval.h  polygon.cxx  polygon.h  segment.h  segmentTree.cxx  segmentTree.h  svgContour.h  svgWriter.h  vertex.h
contour/test/: CMakeLists.txt  svg.h  testBBox.cxx  testContour.cxx  testContourCreator.cxx  testContourCreatorVsAliRoot.cxx  testContourVsAliRoot.cxx  testEdge.cxx  testInterval.cxx  testPolygon.cxx  testSVG.cxx  testSegment.cxx  testSegmentTree.cxx  testVertex.cxx
dataformats/mch/: CMakeLists.txt  Cluster.fbs  Cluster_generated.h  Digit.fbs  Digit_generated.h  DumpRun2.cxx  DumpRun2.h  DumpRun2Clusters.cxx  DumpRun2Clusters.h  README.md  Run2.fbs  Run2FB2YAML.cxx  Run2FB2YAML.h  Run3.fbs  mch-dump-run2.cxx  mch-dump.cxx  mch-yaml-test.cxx
dhlt/: Agent.cxx  Agent.h  AliHLTMUONClusterWriterComponent.cxx  AliHLTMUONClusterWriterComponent.h  AliHLTMUONDigitBlock.cxx  AliHLTMUONDigitBlock.h  AliHLTMUONDigitLoaderComponent.cxx  AliHLTMUONDigitReaderComponent.cxx  AliHLTMUONDigitReaderComponent.h  AliHLTMUONMapping.cxx  AliHLTMUONPreclusterBlock.cxx  AliHLTMUONPreclusterBlock.h  AliHLTMUONPreclusterFinderComponent.cxx  AliHLTMUONPreclusterFinderComponent.h  CMakeLists.txt  README.md  dhltLinkDef.h  preClusteringChain.C  recraw-local.C
genmap/: CMakeLists.txt  HasIntegerIdWithinGivenRange.h  MotifPosition.cxx  MotifPosition.h  Segmentation.cxx  Segmentation.h  genDESegmentationFactory.cxx  genDESegmentationFactory.h  genDetectionElement.cxx  genDetectionElement.h  genMotifType.cxx  genMotifType.h  genPadSize.cxx  genPadSize.h  genSegmentation.cxx  genSegmentation.h  genSegmentationFactory.cxx  genSegmentationFactory.h  genSegmentationImpl0.h  genSegmentationImpl0Type0.h  genSegmentationImpl0Type1.h  genSegmentationImpl0Type10.h  genSegmentationImpl0Type11.h  genSegmentationImpl0Type12.h  genSegmentationImpl0Type13.h  genSegmentationImpl0Type14.h  genSegmentationImpl0Type15.h  genSegmentationImpl0Type16.h  genSegmentationImpl0Type17.h  genSegmentationImpl0Type18.h  genSegmentationImpl0Type19.h  genSegmentationImpl0Type2.h  genSegmentationImpl0Type20.h  genSegmentationImpl0Type3.h  genSegmentationImpl0Type4.h  genSegmentationImpl0Type5.h  genSegmentationImpl0Type6.h  genSegmentationImpl0Type7.h  genSegmentationImpl0Type8.h  genSegmentationImpl0Type9.h  (+26 more)
genmap/test/: CMakeLists.txt  testDetectionElement.cxx  testHasIntegerIdWithinGivenRange.cxx  testMotifType.cxx  testPadSizes.cxx  testSegmentation.cxx
jsonmap/: CMakeLists.txt  README.md  berg2json.cxx  berg2json.h  bp.cxx  bp.h  bp2json.h  ch.cxx  ch.h  ddl.h  ddl2json.cxx  ddl2json.h  de.fbs  de2json.h  json.h  jsonreader.cxx  mch-mapping-convert-to-json.cxx  motif.h  motif2json.cxx  motif2json.h  pcb.cxx  pcb.h  pcb2json.h  sector2json.h  seg.cxx  seg.h  seg2json.h  slat2json.h
jsonmap/codegen/: CMakeLists.txt  README.md  chamber.cxx  codeWriter.cxx  codeWriter.h  detectionElement.cxx  feePadGroup.cxx  feePadGroup.h  goImplementation.cxx  mch-mapping-generate-code.cxx  mchMappingCodeGenerator.cxx  motifPosition.cxx  motifPosition.h  motifPosition1.cxx  motifPosition1.h  motifPosition2.h  motifType.cxx  motifType.h  padGroup.cxx  padGroup.h  padGroupType.cxx  padGroupType.h  padSize.cxx  padSize.h  report.cxx  report.h  segmentation.cxx  segmentation.h  segmentation1.cxx  segmentation1.h  segmentation2.cxx  segmentation2.h  segmentationCommon.cxx  segmentationCommon.h  writer.cxx  writer.h
jsonmap/creator/: CMakeLists.txt  README.md  bp2json.h  cantypefitvalue.h  ch2json.h  contour.cxx  contour.h  ddl.cxx  ddl2json.h  de.cxx  de.h  de2json.h  generateTestFiles.cxx  generateTestFiles.h  interval.h  json.h  legacyseg2json.h  mch-mapping-convert-to-json.cxx  motif.cxx  motif.h  (+23 more)
r23/: CMakeLists.txt  O2Muon.cxx  O2Muon.h
svgwriter/: CMakeLists.txt  svgContour.cxx  svgContour.h  svgSegmentationInterface.cxx  svgSegmentationInterface.h  svgWriter.cxx
vsaliroot/: CMakeLists.txt  CommonContour.cxx  CommonContour.h  GenerateTestPoints.h  MappingFixture.cxx  MappingFixture.h  benchContour.cxx  benchContourVsAliRoot.cxx  benchNeighbouringPad.cxx  benchPadByPosition.cxx  benchPadInArea.cxx  benchSegmentation.cxx  benchSegmentationVsAliRoot.cxx  bench_ContourVsAliRoot.cxx  bench_MIDSegmentation.cxx  bench_NeighbouringPad.cxx  bench_PadByPosition.cxx  bench_PadInArea.cxx  commonBench.cxx  commonContour.cxx  commonContour.h  generateTestPoints.cxx  mappingFixture.cxx  mappingFixture.h  testContourCreatorVsAliRoot.cxx  testFindPadByPosition.cxx  testForEachNeighbouringPad.cxx  testForEachPadInArea.cxx  testSegmentationVsAliRoot.cxx  testSegmentationVsAliRoot2.cxx  testSomeGlobalNumbers.cxx  test_ContourCreatorVsAliRoot.cxx  test_FindPadByPosition.cxx  test_ForEachNeighbouringPad.cxx  test_ForEachPadInArea.cxx  test_MIDGeomTransformer.cxx  test_MIDSegmentation.cxx  test_SomeGlobalNumbers.cxx
(+419 files in other folders)
